Update vuejs config